--- a/website/package.json
+++ b/website/package.json
@@ -26,8 +26,10 @@
     "rc-tween-one": "^3.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.4",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.0",
     "remove": "^0.1.5"
   },
   "devDependencies": {
