--- a/react/package.json
+++ b/react/package.json
@@ -10,24 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.6",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.6",
     "framer-motion": "^11.3.17",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.418.0",
     "match-sorter": "^6.3.4",
     "npm": "^10.8.2",
     "quill": "^2.0.2",
-    "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-react": "^3.0.0",
     "rc-tween-one": "^3.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
-    "react-quill": "^2.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-quilljs": "^2.0.4",
     "react-router-dom": "^6.26.0",
     "remove": "^0.1.5"
